--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MarvelDemo</string>
+    <string name="search">Search</string>
+    <string name="superheroes">Superheroes or Superheroins</string>
+    <string name="no_results">No results</string>
 </resources>
